include/vcl/lineinfo.hxx
@@ -27,6 +27,8 @@
 #include <com/sun/star/drawing/LineCap.hpp>
 #include <o3tl/cow_wrapper.hxx>
 
+#include <vector>
+
 class SvStream;
 namespace basegfx { class B2DPolyPolygon; }
 
@@ -83,6 +85,9 @@ public:
 
     void            SetDistance( double nDistance );
     double          GetDistance() const { return mpImplLineInfo->mnDistance; }
+
+    /// Get an array of "on" and "off" lengths for stroke dashing
+    std::vector< double > GetDotDashArray() const;
 
     void SetLineJoin(basegfx::B2DLineJoin eLineJoin);
     basegfx::B2DLineJoin GetLineJoin() const { return mpImplLineInfo->meLineJoin; }
